[package]
name = "libscroll"
version = "0.1.6"
authors = ["Sawyer Bergeron <sawyerbergeron@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Scrollview event handling library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2"
flo_curves = "0.3"
